5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4366/executions/1577_1332.log
== TEST (2019-03-23 13:40:28) 
-- CODE:
aresta=5
area =3/2*(3)**0.5 
 
print(round(area, 4))
-- OUTPUT:
2.5981
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 13:40:46) 
-- CODE:
aresta=5
area =3/2*(3)**0.5 
 
print(round(area, 4))
-- EXECUTION TIME:
0.141664
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
2.5981
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 13:41:26) 
-- CODE:
aresta=5
area =3/2*(3/2)**0.5 
 
print(round(area, 4))
-- OUTPUT:
1.8371
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 13:42:07) 
-- CODE:
aresta=5
area =3/2*(3/2)**0.5 
 
print(round(area, 4))
-- EXECUTION TIME:
0.181448
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
1.8371
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 13:43:44) 
-- CODE:
aresta=5
area =3/2(3/2)**0.5 
 
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area =3/2(3/2)**0.5 
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 13:44:24) 
-- CODE:
aresta=5
area =int(3/2(3/2)**0.5) 
 
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area =int(3/2(3/2)**0.5) 
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 13:46:03) 
-- CODE:
aresta=5
area =3/2(1**3/2)**0.5
 
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area =3/2(1**3/2)**0.5
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 13:47:34) 
-- CODE:
aresta=5
area =3/2(1/2**3)
 
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area =3/2(1/2**3)
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 13:53:27) 
-- CODE:
aresta=5
area =3/2(1**3/2**3)5**2
 
print(round(area, 4))
-- ERROR:
File "XXXX", line 2
    area =3/2(1**3/2**3)5**2
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 13:53:47) 
-- CODE:
aresta=5
area =3/2(1**3/2**3)
 
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area =3/2(1**3/2**3)
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 13:55:20) 
-- CODE:
aresta=5
area =3**3/2**3
 
print(round(area, 4))
-- OUTPUT:
3.375
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 13:55:43) 
-- CODE:
aresta=5
area =3**3/2**3
 
print(round(area, 4))
-- EXECUTION TIME:
0.152213
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
3.375
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 13:56:57) 
-- CODE:
aresta=5**2
area =3**3/2**3
 
print(round(area, 4))
-- OUTPUT:
3.375
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 13:57:53) 
-- CODE:
aresta=5
area =3**3/2**3*5**0.5
 
print(round(area, 4))
-- OUTPUT:
7.5467
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 13:58:07) 
-- CODE:
aresta=5
area =3**3/2**3*5**0.5
 
print(round(area, 4))
-- EXECUTION TIME:
0.145506
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
7.5467
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 13:59:44) 
-- CODE:
aresta=6
area =3**3/2**3*6**0.5
 
print(round(area, 4))
-- OUTPUT:
8.267
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 14:00:23) 
-- CODE:
aresta=6**0.5
area =3**3/2**3*6**0.5
 
print(round(area, 4))
-- OUTPUT:
8.267
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 14:00:48) 
-- CODE:
aresta=5**0.5
area =3**3/2**3*5**0.5
 
print(round(area, 4))
-- OUTPUT:
7.5467
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 14:00:56) 
-- CODE:
aresta=5**0.5
area =3**3/2**3*5**0.5
 
print(round(area, 4))
-- EXECUTION TIME:
0.193514
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
7.5467
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 13:03:36) 
-- CODE:
aresta=5
area =3/2*(3)**0.5*30**2
 
print(round(area, 4))
-- OUTPUT:
2338.2686
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 13:03:53) 
-- CODE:
aresta=5
area =3/2*(3)**0.5*30**2
 
print(round(area, 4))
-- OUTPUT:
2338.2686
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 13:04:06) 
-- CODE:
aresta=5
area =3/2*(3)**0.5*30**2
 
print(round(area, 4))
-- EXECUTION TIME:
0.182516
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
2338.2686
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 13:04:23) 
-- CODE:
aresta=6
area =3/2*(3)**0.5*30**2
 
print(round(area, 4))
-- OUTPUT:
2338.2686
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 13:04:45) 
-- CODE:
aresta=5*6
area =3/2*(3)**0.5*30**2
 
print(round(area, 4))
-- OUTPUT:
2338.2686
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 13:05:07) 
-- CODE:
aresta=5*6
area =3/2 (3)**0.5 30**2
 
print(round(area, 4))
-- ERROR:
File "XXXX", line 2
    area =3/2 (3)**0.5 30**2
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 13:05:35) 
-- CODE:
aresta=
area =3/2*(3)**0.5*30**2
 
print(round(area, 4))
-- ERROR:
File "XXXX", line 1
    aresta=
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 13:05:52) 
-- CODE:
aresta=
area =3/2*(3)**0.5*5**2
 
print(round(area, 4))
-- ERROR:
File "XXXX", line 1
    aresta=
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 13:06:48) 
-- CODE:
aresta=5
area =3/2*(3)**0.5
 
print(round(area, 4))
-- OUTPUT:
2.5981
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 13:06:56) 
-- CODE:
aresta=5
area =3/2*(3)**0.5
 
print(round(area, 4))
-- EXECUTION TIME:
0.15303
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
2.5981
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 13:07:09) 
-- CODE:
aresta=5**2
area =3/2*(3)**0.5
 
print(round(area, 4))
-- OUTPUT:
2.5981
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 15:32:26) 
-- CODE:
aresta=5
area =3/2*rad(3)**0.5*pot(a,2)
 
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area =3/2*rad(3)**0.5*pot(a,2)
NameError: name 'rad' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 15:36:53) 
-- CODE:
aresta=5
area =3/2*(3)**0.5*pot(a,2)
 
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area =3/2*(3)**0.5*pot(a,2)
NameError: name 'pot' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 15:37:53) 
-- CODE:
aresta=5
area =3/2*(3)**0.5*(a,2)
 
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area =3/2*(3)**0.5*(a,2)
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 15:41:51) 
-- CODE:
aresta=5
area =3/2*(3)**0.5*(5,2)
 
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area =3/2*(3)**0.5*(5,2)
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 15:43:29) 
-- CODE:
aresta=5
area =3/2*(3)**0.5*5**2
 
print(round(area, 4))
-- OUTPUT:
64.9519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 15:44:04) 
-- CODE:
aresta=5
area =3/2*(3)**0.5*5**2
 
print(round(area, 4))
-- EXECUTION TIME:
0.138424
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
64.9519
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
